sratom (0.6.21) unstable; urgency=medium

  * Address new warnings in clang and clang-tidy 21
  * Gracefully handle vectors with missing childType properties

 -- David Robillard <d@drobilla.net>  Fri, 23 Jan 2026 13:59:30 +0000

sratom (0.6.20) stable; urgency=medium

  * Avoid over-use of yielding meson options
  * Avoid use of scanf when reading MIDI events
  * Fix lint checks
  * Fix potential memory error when writing ambiguous relative paths
  * Improve code quality

 -- David Robillard <d@drobilla.net>  Wed, 12 Nov 2025 19:26:04 +0000

sratom (0.6.18) stable; urgency=medium

  * Add lint option with project metadata and code formatting tests
  * Avoid snprintf when writing MIDI events
  * Enable clang nullability checks
  * Fix library current_version on MacOS

 -- David Robillard <d@drobilla.net>  Sun, 19 Jan 2025 13:49:56 +0000

sratom (0.6.16) stable; urgency=medium

  * Clean up code
  * Constrain relative URI references to the base URI
  * Fix dependencies in pkg-config file
  * Override pkg-config dependency within meson
  * Remove junk files from documentation install
  * Replace duplicated dox_to_sphinx script with sphinxygen dependency

 -- David Robillard <d@drobilla.net>  Sun, 22 Oct 2023 20:06:26 +0000

sratom (0.6.14) stable; urgency=medium

  * Add project metadata
  * Adopt REUSE machine-readable licensing standard

 -- David Robillard <d@drobilla.net>  Fri, 09 Sep 2022 17:29:00 +0000

sratom (0.6.12) stable; urgency=medium

  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Tue, 19 Jul 2022 01:13:03 +0000

sratom (0.6.10) stable; urgency=medium

  * Fix documentation installation directory
  * Fix potential blank node ID truncation

 -- David Robillard <d@drobilla.net>  Thu, 26 May 2022 23:27:00 +0000

sratom (0.6.8) stable; urgency=medium

  * Fix potential null pointer dereference

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:36:14 +0000

sratom (0.6.6) stable; urgency=medium
