@@ -1,9 +1,10 @@
 sratom (0.6.21) unstable; urgency=medium
 
   * Address new warnings in clang and clang-tidy 21
-  * Gracefully handle vectors with missing childType properties
+  * Gracefully handle reading vectors with missing childType properties
+  * Gracefully handle writing vectors with zero childSize properties
 
- -- David Robillard <d@drobilla.net>  Fri, 23 Jan 2026 13:59:30 +0000
+ -- David Robillard <d@drobilla.net>  Fri, 06 Feb 2026 00:33:21 +0000
 
 sratom (0.6.20) stable; urgency=medium
 
